--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -45,6 +45,32 @@
             android:textSize="20sp"
             android:text="My offers"/>
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/btn_create_offer"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal"
+        android:clickable="true"
+        android:background="?attr/selectableItemBackground"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:src="@drawable/ic_profile"
+            android:tint="@android:color/darker_gray"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            android:text="Create Offer"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -76,8 +102,9 @@
             android:layout_marginRight="16dp"
             android:textColor="@android:color/black"
             android:textSize="20sp"
-            android:textAlignment="center"
             android:text="Log out"/>
     </LinearLayout>
+
+
 
 </LinearLayout>
