--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,6 +26,14 @@
         android:layout_marginTop="20dp"
         />
 
+    <com.google.android.gms.common.SignInButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/google_btn_login"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp">
+    </com.google.android.gms.common.SignInButton>
+
     <Button
         android:id="@+id/btn_log_in_login"
         android:layout_width="match_parent"
