--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,29 +15,18 @@
             android:id="@+id/toolbar"
             layout="@layout/toolbar">
         </include>
-        <TextView
-            android:gravity="center"
+        <FrameLayout
+            android:id="@+id/fragment_container_main"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:text="WELCOME TO MAIN PAGE"/>
+            android:layout_height="match_parent">
 
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_main"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
-
-        </android.support.v7.widget.RecyclerView>
+        </FrameLayout>
 
     </LinearLayout>
 
     <fragment
         android:id="@+id/nav_drawer_fragment"
-        android:name="com.projects.radomonov.homeless.app.NavigationDrawerFragment"
+        android:name="com.projects.radomonov.homeless.fragments.NavigationDrawerFragment"
         android:layout_width="270dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
