--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -12,10 +12,12 @@
         android:layout_height="160dp"
         android:background="@color/colorPrimary">
         <ImageView
+            android:id="@+id/img_edit_profile_drawer_frag"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_centerInParent="true"
             android:scaleType="fitCenter"
+            android:clickable="true"
             android:src="@drawable/ic_profile"/>
     </RelativeLayout>
 
