--- a/app/src/main/res/layout/offer_item.xml
+++ b/app/src/main/res/layout/offer_item.xml
@@ -2,7 +2,11 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/card_view_item">
+    xmlns:cardview="http://schemas.android.com/apk/res-auto"
+    cardview:cardCornerRadius="22dp"
+    cardview:cardElevation="14dp"
+    android:id="@+id/card_view_item"
+    android:layout_margin="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,59 +16,57 @@
         <TextView
             android:id="@+id/tv_title_item"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
+            android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:textSize="15sp" />
+            android:textSize="25sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="5"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="100dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tv_price_item"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="2"
-                    android:textAlignment="center" />
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    />
 
                 <TextView
                     android:id="@+id/tv_currency_item"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
                     android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/tv_rooms_item"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:textAlignment="center" />
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    />
 
             </LinearLayout>
 
             <ImageView
                 android:id="@+id/img_item"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3" />
+                android:layout_weight="1"
+                android:layout_height="150dp"
+                android:scaleType="centerCrop"
+                android:adjustViewBounds="true"
+                />
 
         </LinearLayout>
 
         <TextView
             android:id="@+id/tv_neighbourhood_item"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:textAlignment="center" />
     </LinearLayout>
 
