--- a/app/src/main/res/layout/offer_item.xml
+++ b/app/src/main/res/layout/offer_item.xml
@@ -33,20 +33,23 @@
                 <TextView
                     android:id="@+id/tv_price_item"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
                     android:textAlignment="center"
                     />
 
                 <TextView
                     android:id="@+id/tv_currency_item"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
                     android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/tv_rooms_item"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
                     android:textAlignment="center"
                     />
 
