--- a/app/src/main/res/layout/fragment_setup_account.xml
+++ b/app/src/main/res/layout/fragment_setup_account.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -7,8 +8,8 @@
 
     <ImageView
         android:id="@+id/img_edit_profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:layout_marginTop="30dp"
         android:layout_gravity="center"
         android:clickable="true"
