--- a/app/src/main/res/layout/fragment_create_offer.xml
+++ b/app/src/main/res/layout/fragment_create_offer.xml
@@ -116,5 +116,13 @@
             android:text="Save"
             android:textSize="20sp"
             android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btn_delete_create"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Delete Offer"
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </LinearLayout>
 </ScrollView>
