--- a/app/src/main/res/layout/offer_item.xml
+++ b/app/src/main/res/layout/offer_item.xml
@@ -60,7 +60,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="150dp"
-                android:scaleType="centerCrop"
+                android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
                 />
 
