--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,10 +9,14 @@
     </style>
 
 
-
     <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:textColorPrimary">@android:color/white</item><!--textcolor of Toolbar title -->
+        <item name="android:textColorPrimary">@android:color/white
+        </item><!--textcolor of Toolbar title -->
         <item name="android:textColorSecondary">@android:color/white</item><!--Color of over flow menu(3 dots icon)
                                                                             and color of Navigation Drawer Icon -->
     </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
