neighbourhoods enum and spinner

--- a/app/src/main/res/layout/fragment_create_offer.xml
+++ b/app/src/main/res/layout/fragment_create_offer.xml
@@ -44,6 +44,10 @@
 
         </android.support.v7.widget.RecyclerView>
 
+        <Spinner
+            android:id="@+id/spinnner_neigh_create"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></Spinner>
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
