--- a/app/src/main/res/layout/fragment_create_offer.xml
+++ b/app/src/main/res/layout/fragment_create_offer.xml
@@ -109,23 +109,15 @@
                android:layout_height="wrap_content"
                android:text="EU"/>
        </RadioGroup>
-
-        <android.support.design.widget.TextInputLayout
+        <EditText
+            android:id="@+id/et_description_create"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/et_neighbourhood_create"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:hint="Neighbourhood"
-                android:inputType="text"
-                />
-
-        </android.support.design.widget.TextInputLayout>
-
-
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine"
+            android:gravity="top|left"
+            android:minLines="10"
+            android:lines="10"
+            />
         <Button
             android:id="@+id/btn_save_create"
             android:layout_width="match_parent"
@@ -150,6 +142,5 @@
             android:textStyle="bold"
             android:text="Cancel"
             />
-
     </LinearLayout>
 </ScrollView>
