--- a/app/src/main/res/layout/fragment_offer_view.xml
+++ b/app/src/main/res/layout/fragment_offer_view.xml
@@ -13,7 +13,7 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/view_pager_offer_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             >
 
         </android.support.v4.view.ViewPager>
