--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -12,9 +12,9 @@
     <Spinner
         android:id="@+id/spinner_neigh"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        />
 
-    </Spinner>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_neighbourhoods_search"
