--- a/app/src/main/res/layout/fragment_create_offer.xml
+++ b/app/src/main/res/layout/fragment_create_offer.xml
@@ -76,6 +76,7 @@
                 android:layout_margin="16dp"
                 android:hint="Rooms"
                 android:inputType="number"
+                android:maxLength="1"
                 />
 
         </android.support.design.widget.TextInputLayout>
@@ -91,6 +92,8 @@
                 android:layout_margin="16dp"
                 android:hint="Price"
                 android:inputType="number"
+                android:maxLength="4"
+
                 />
 
         </android.support.design.widget.TextInputLayout>
@@ -99,25 +102,35 @@
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
-               android:id="@+id/rbtn_bgn"
+               android:id="@+id/rdbtn_bgn_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
+               android:checked="true"
                android:text="BGN"/>
            <RadioButton
-               android:id="@+id/rbtn_eu"
+               android:id="@+id/rdbtn_eu_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EU"/>
        </RadioGroup>
-        <EditText
-            android:id="@+id/et_description_create"
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/et_description_layout_create"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
-            android:gravity="top|left"
-            android:minLines="10"
-            android:lines="10"
-            />
+            android:layout_height="wrap_content">
+            <android.support.design.widget.TextInputEditText
+
+                android:id="@+id/et_description_create"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inputType="textMultiLine"
+                android:gravity="top|left"
+                android:minLines="10"
+                android:lines="10"
+                android:hint="Description"/>
+        </android.support.design.widget.TextInputLayout>
+
+
         <Button
             android:id="@+id/btn_save_create"
             android:layout_width="match_parent"
