--- a/app/src/main/res/layout/alert_dialog_layout.xml
+++ b/app/src/main/res/layout/alert_dialog_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/tv_title_alert"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/colorAccent"
@@ -22,14 +22,14 @@
         android:layout_height="wrap_content"
         android:background="#FFF"
         android:paddingBottom="16dp"
-        android:layout_below="@+id/title"
+        android:layout_below="@+id/tv_title_alert"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
-    <ImageButton
-        android:id="@+id/image"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
+    <ImageView
+        android:id="@+id/image_btn_alert"
+        android:layout_width="156dp"
+        android:layout_height="156dp"
         android:background="#00FFFFFF"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
@@ -40,11 +40,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/image"
+        android:layout_below="@+id/image_btn_alert"
         android:layout_marginTop="10dp"
         android:textColor="#000"
         android:gravity="center"
-        android:text="Are you really want to close \n this awesome App?"
+        android:text="Are you really want stay \n Homeless?"
         android:textSize="18sp" />
     </RelativeLayout>
 
